--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "node index.js",
-    "start_dev" : "nodemone index.js"
+    "start": "node index.js",
+    "start_dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "hbs": "^4.1.1"
+    "hbs": "^4.1.1",
+    "morgan": "^1.10.0",
+    "npm": "^6.14.8",
+    "sqlite3": "^5.0.0"
   },
-  "type" : "module"
+  "type": "module"
 }
